[package]
name = "nats-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
winnow = "0.6.13"

[dev-dependencies]
bytes = "1.6.0"
futures = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["net", "codec", "io"] }
tracing = { version = "0.1.40", features = ["default", "log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
