[workspace]
resolver = "2"
members = ["nats_client", "nats_sans_io", "nats_codec", "nats_server"]

[workspace.dependencies]
tokio = { version = "1.38.0", default-features = false }
tokio-stream = { version = "0.1.15", default-features = false} 
tokio-util = { version = "0.7.11", default-features = false }

nats_codec = { path = "./nats_codec" }
nats_sans_io = { path = "./nats_sans_io" }
log = "0.4"