[package]
name = "nats_client"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tokio-subscriber"

[[example]]
name = "tokio-publisher"

[[example]]
name = "blind-subscriber"

[[example]]
name = "blind-publisher"

[dependencies]
log = { workspace = true }
nats_codec = { workspace = true }
nats_sans_io = { workspace = true }

clap = { version = "4.5.7", features = ["derive", "cargo"] }
env_logger = "0.11.3"
futures = "0.3.30"
nkeys = "0.4.1"

tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "net",
    "time",
    "rt-multi-thread",
] }
tokio-stream = { features = ["io-util", "sync"], version = "0.1.15" } 
tokio-util = { workspace = true, features = ["codec"] }

[dev-dependencies]
chrono = "0.4"

