[package]
name = "nats_sans_io"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tokio"

[dependencies]
logcall = "0.1"
log = { workspace = true }
tokio = { workspace = true, features = [    
    "macros",
    "net",
    "rt",
    "rt-multi-thread"
] }
tokio-util = { workspace = true, features = ["codec"] }
nats_codec = { workspace = true }

thiserror = "1.0"
env_logger = "0.11.3"

[dev-dependencies]
bytes = "1.6.0"
futures = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["net", "codec", "io"] }
tracing = { version = "0.1.40", features = ["default", "log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
