[package]
name = "nats_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { workspace = true, features = ["codec"] }

memchr = "2.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = [
    "codec",
] }

serde_json = "1.0"
tokio-stream = { workspace = true }
